<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:visible="false"
        android:id="@+id/navigation_registration"
        android:icon="@drawable/ic_symbol"
        android:title="@string/title_registartion" />

    <item
        android:id="@+id/navigation_score"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/title_wallet" />

    <item
        android:visible="false"
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
